--- a/public/app.css
+++ b/public/app.css
@@ -20,7 +20,7 @@ body {
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0); /* mobile webkit */
 }
 
-#fps {
+#fps-container {
     position: absolute;
     background-color: black;
     border: 2px solid red;
