--- a/public/app.css
+++ b/public/app.css
@@ -2,6 +2,16 @@ body {
     margin: 0px;
 }
 
+#error-container {
+    display: none;
+    background-color: rgb(36, 36, 36);
+    min-height: 100vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+}
+
 #canvas-container {
     background-color: rgb(36, 36, 36);
     min-height: 100vh;
