--- a/public/app.css
+++ b/public/app.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'roadgeek';
+    src: url('./assets/fonts/roadgeek-2005-mittelschrift-regular.ttf') format('truetype');
+}
+
 body {
     margin: 0px;
 }
@@ -28,6 +33,21 @@ body {
     outline: none;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0); /* mobile webkit */
+}
+
+#blackscreen-container {
+    display: flex;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(36, 36, 36);
+}
+
+#gui-container {
+    display: flex;
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 #fps-container {
