--- a/public/app.css
+++ b/public/app.css
@@ -44,7 +44,8 @@ body {
 }
 
 #gui-container {
-    display: flex;
+    /* display: flex; */
+    display: none;
     position: absolute;
     width: 100%;
     height: 100%;
