--- a/public/app.css
+++ b/public/app.css
@@ -7,17 +7,7 @@ body {
     margin: 0px;
 }
 
-#error-container {
-    display: none;
-    background-color: rgb(36, 36, 36);
-    min-height: 100vh;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-}
-
-#canvas-container {
+#background {
     background-color: rgb(36, 36, 36);
     min-height: 100vh;
     display: flex;
@@ -27,12 +17,23 @@ body {
     font-size: calc(10px + 2vmin);
 }
 
-#canvas {
+#khanonjs {
     width: 100vw;
     height: 90vh;
     outline: none;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0); /* mobile webkit */
+}
+
+/*
+#error-container {
+    display: none;
+    background-color: rgb(36, 36, 36);
+    min-height: 100vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
 }
 
 #blackscreen-container {
@@ -44,7 +45,7 @@ body {
 }
 
 #gui-container {
-    /* display: flex; */
+    display: flex;
     display: none;
     position: absolute;
     width: 100%;
@@ -63,3 +64,4 @@ body {
     width: 60px;
     height: 20px;
 }
+*/
